refactor: Switch to "Spring 17" Stack (#142)
Co-authored-by: Alexander Dümont <alexander.duemont@sap.com>
Co-authored-by: CharlesDuboisSAP <charles.dubois@sap.com>
Co-authored-by: Kavitha <kavitha.sivakumar@sap.com>
Co-authored-by: Matthias Kuhr <matthias.kuhr@sap.com>